The source menu now loads its content as you would expect